--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.7
 
 # Install requirements
 RUN pip install --no-cache-dir --upgrade pip
-COPY requirements.txt .
+COPY back/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Add source code
