--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -11,15 +11,15 @@ WORKDIR /app
 RUN mkdir ./build
 
 # host pc의 현재경로의 build 폴더를 workdir 의 build 폴더로 복사
-ADD ./build ./build
+ADD front/build ./build
 
 # nginx 의 default.conf 를 삭제
 RUN rm /etc/nginx/conf.d/default.conf
 
 # host pc 의 nginx.conf 를 아래 경로에 복사
-COPY ./nginx.conf /etc/nginx/conf.d
+COPY front/nginx.conf /etc/nginx/conf.d
 
-COPY ./proxy_params /etc/nginx
+COPY front/proxy_params /etc/nginx
 
 # 80 포트 오픈
 EXPOSE 80
