--- a/front/Jenkinsfile
+++ b/front/Jenkinsfile
@@ -20,6 +20,14 @@ node {
         }
     }
 
+    stage('npm') {
+
+        nodejs(nodeJSInstallationName: 'node') { // 위의 설정에서 지정한 node 이름
+        sh 'npm install && npm run build'
+        }
+
+    }
+
     stage('Push image') {
         
         docker.withRegistry('https://registry.hub.docker.com', 'dockerhub') {
