--- a/front/Jenkinsfile
+++ b/front/Jenkinsfile
@@ -1,5 +1,11 @@
 node {
     def app
+    agent {
+        docker {
+            image 'node:lts-bullseye-slim' 
+            args '-p 3000:3000' 
+        }
+    }
     
     stage('Clone repository') {
       
@@ -22,9 +28,12 @@ node {
 
     stage('npm') {
 
-        nodejs(nodeJSInstallationName: 'node') { // 위의 설정에서 지정한 node 이름
-        sh 'npm install && npm run build'
-        }
+        // nodejs(nodeJSInstallationName: 'node') { // 위의 설정에서 지정한 node 이름
+        // sh 'npm install && npm run build'
+        // }
+        steps {
+                sh 'npm install && npm run build'
+            }
 
     }
 
