--- a/front/Jenkinsfile
+++ b/front/Jenkinsfile
@@ -5,41 +5,7 @@
 //         nodejs 'node'
 //     }
     
-//     stage('Clone repository') {
-      
 
-//         checkout scm
-//     }
-//     stage('npm install') {
-//         steps {
-//             sh 'npm install && npm run build'
-//         }
-//     }
-
-//     stage('Build image') {
-  
-//        app = docker.build("rlarlgkd/fm3front", "-f front/Dockerfile .")
-//     }
-
-//     stage('Test image') {
-  
-
-//         app.inside {
-//             sh 'echo "Tests passed"'
-//         }
-//     }
-
-//     stage('Push image') {
-        
-//         docker.withRegistry('https://registry.hub.docker.com', 'dockerhub') {
-//             app.push("${env.BUILD_NUMBER}")
-//         }
-//     }
-    
-//     stage('Trigger ManifestUpdate') {
-//                 echo "triggering updatemanifestjob"
-//                 build job: 'manifestFront', parameters: [string(name: 'DOCKERTAG', value: env.BUILD_NUMBER)]
-//         }
 // }
 pipeline {
     agent { docker { image 'node:16.17.1-alpine' } }
@@ -49,5 +15,40 @@ pipeline {
                 sh 'node --version'
             }
         }
+        stage('Clone repository') {
+      
+
+        checkout scm
+        }
+        stage('npm install') {
+            steps {
+                sh 'npm install && npm run build'
+            }
+        }
+
+        stage('Build image') {
+    
+        app = docker.build("rlarlgkd/fm3front", "-f front/Dockerfile .")
+        }
+
+        stage('Test image') {
+    
+
+            app.inside {
+                sh 'echo "Tests passed"'
+            }
+        }
+
+        stage('Push image') {
+            
+            docker.withRegistry('https://registry.hub.docker.com', 'dockerhub') {
+                app.push("${env.BUILD_NUMBER}")
+            }
+        }
+        
+        stage('Trigger ManifestUpdate') {
+                    echo "triggering updatemanifestjob"
+                    build job: 'manifestFront', parameters: [string(name: 'DOCKERTAG', value: env.BUILD_NUMBER)]
+            }   
     }
 }
