--- a/front/Jenkinsfile
+++ b/front/Jenkinsfile
@@ -46,6 +46,7 @@ pipeline {
     stages {
         stage('build') {
             steps {
+                sh 'cd ./front'
                 sh 'node --version'
                 sh 'npm install'
                 sh 'npm run build'
