--- a/front/Jenkinsfile
+++ b/front/Jenkinsfile
@@ -44,6 +44,11 @@
 pipeline {
     agent { docker { image 'node:16.17.1-alpine' } }
     stages {
+        stage('Clone repository') {
+      
+
+            checkout scm
+        }
         stage('build') {
             steps {
                 sh 'cd ./front'
