--- a/front/Jenkinsfile
+++ b/front/Jenkinsfile
@@ -46,8 +46,9 @@ pipeline {
     stages {
         stage('Clone repository') {
       
-
+            steps {
             checkout scm
+            }
         }
         stage('build') {
             steps {
