--- a/front/Jenkinsfile
+++ b/front/Jenkinsfile
@@ -53,9 +53,9 @@ pipeline {
         stage('build') {
             steps {
                // sh 'cd /front/package.json' 
-                sh 'node --version'
-                sh 'npm install'
-                sh 'npm run build'
+               sh 'node --version'
+               // sh 'npm install'
+               // sh 'npm run build'
             }
         }
     }
