--- a/front/Jenkinsfile
+++ b/front/Jenkinsfile
@@ -55,7 +55,7 @@ pipeline {
                 sh 'cd /home/vagrant/.jenkins/workspace/frontimage/front/.' 
                 sh 'node --version'
                 sh 'npm cache clean --force'
-                sh 'npm install'
+//                 sh 'npm install'
                 sh 'npm run build'
             }
         }
