--- a/front/Jenkinsfile
+++ b/front/Jenkinsfile
@@ -44,11 +44,10 @@
 pipeline {
     agent { docker { image 'node:16.17.1-alpine' } }
     stages {
-        stage('Clone repository') {
-      
-            steps {
-            checkout scm
-            }
+        stage('Cloning Git') {
+        steps {
+            git 'https://github.com/rlarlgkd/fm3web.git'
+        }
         }
         stage('build') {
             steps {
