--- a/front/Jenkinsfile
+++ b/front/Jenkinsfile
@@ -51,10 +51,10 @@ pipeline {
         }
         stage('build') {
             steps {
-               sh 'cd fm3web/front/' 
+               //sh 'cd fm3web/front/' 
                sh 'node --version' // test
-               sh 'npm install'
-               sh 'npm run build'
+               //sh 'npm install'
+               //sh 'npm run build'
             }
         }
     }
