--- a/front/Jenkinsfile
+++ b/front/Jenkinsfile
@@ -42,7 +42,9 @@
 //         }
 // }
 pipeline {
-    agent { docker { image 'node:16.17.1-alpine' } }
+    // agent { docker { image 'node:16.17.1-alpine' } }
+    agent any
+    tools {nodejs "node"}
     stages {
         stage('Cloning Git') {
         steps {
