--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -1,6 +1,6 @@
-upstream app_server {
-    server 192.168.20.102:5000 fail_timeout=0;
-  }
+#upstream app_server {
+#    server 192.168.20.102:5000 fail_timeout=0;
+#  }
 
 server {
     listen 80;
@@ -18,30 +18,30 @@ server {
    # }
 location /user {
 	include proxy_params;
-	proxy_pass http://10.233.56.155:5000/user;
+	proxy_pass http://10.233.12.130:5000/user;
 }
 
 location /auth {
 	include proxy_params;
-	proxy_pass http://10.233.56.155:5000/auth;
+	proxy_pass http://10.233.12.13:5000/auth;
 }
 
 location /privacy {
 	include proxy_params;
-	proxy_pass http://10.233.56.155:5000/privacy;
+	proxy_pass http://10.233.12.13:5000/privacy;
 }
 location /subject {
 	include proxy_params;
-	proxy_pass http://10.233.56.155:5000/subject;
+	proxy_pass http://10.233.12.13:5000/subject;
 }
 location /favorites {
 	include proxy_params;
-	proxy_pass http://10.233.56.155:5000/favorites;
+	proxy_pass http://10.233.12.13:5000/favorites;
 }
 
 location /complete {
 	include proxy_params;
-	proxy_pass http://10.233.56.155:5000/complete;
+	proxy_pass http://10.233.12.13:5000/complete;
 }
 }
 
