--- a/back/Jenkinsfile
+++ b/back/Jenkinsfile
@@ -29,6 +29,6 @@ node {
     
     stage('Trigger ManifestUpdate') {
                 echo "triggering updatemanifestjob"
-                build job: 'updatemanifest', parameters: [string(name: 'DOCKERTAG', value: env.BUILD_NUMBER)]
+                build job: 'manifestBack', parameters: [string(name: 'DOCKERTAG', value: env.BUILD_NUMBER)]
         }
 }
