--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -31,7 +31,7 @@ location /favorites {
 
 location /complete {
 	include proxy_params;
-	proxy_pass http:/10.233.14.151:5000/complete;
+	proxy_pass http://10.233.14.151:5000/complete;
 }
 }
 
