--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -8,30 +8,30 @@ server {
 
 	location /user {
 		include proxy_params;
-		proxy_pass http://10.233.14.151:5000/user;
+		proxy_pass http://myapp-svc-flask.default.svc.cluster.local:5000/user;
 	}
 
 	location /auth {
 		include proxy_params;
-		proxy_pass http://10.233.14.151:5000/auth;
+		proxy_pass http://myapp-svc-flask.default.svc.cluster.local:5000/auth;
 	}
 
 	location /privacy {
 		include proxy_params;
-		proxy_pass http://10.233.14.151:5000/privacy;
+		proxy_pass http://myapp-svc-flask.default.svc.cluster.local:5000/privacy;
 	}
 	location /subject {
 		include proxy_params;
-		proxy_pass http://10.233.14.151:5000/subject;
+		proxy_pass http://myapp-svc-flask.default.svc.cluster.local:5000/subject;
 	}
 	location /favorites {
 		include proxy_params;
-		proxy_pass http://10.233.14.151:5000/favorites;
+		proxy_pass http://myapp-svc-flask.default.svc.cluster.local:5000/favorites;
 	}
 
 	location /complete {
 		include proxy_params;
-		proxy_pass http://10.233.14.151:5000/complete;
+		proxy_pass http://myapp-svc-flask.default.svc.cluster.local:5000/complete;
 	}
 }
 
